<resources>
    <string name="app_name">ChildPedia</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean laoreet scelerisque enim id pulvinar. Aenean pretium metus in rutrum hendrerit. Ut ultricies velit nisl, vel iaculis ante elementum ac. Suspendisse accumsan risus id metus tincidunt, et sagittis est scelerisque. Duis vel lorem laoreet, hendrerit quam vitae, laoreet massa. Nunc at dapibus tortor. Aenean mollis arcu in sem tristique, vitae interdum nisi bibendum. Sed non vulputate ante. Curabitur tincidunt neque a diam hendrerit, a efficitur dui commodo.</string>
    <string name="dummy_name">Dimas Perkasa</string>
    <string name="dummy_username">Dims33</string>
    <string name="tab_title_post">Post</string>
    <string name="tab_title_achievement">Achievement</string>
    <string name="title">Title</string>
    <string name="item_image">Item Image</string>
    <string name="context">Context</string>
    <string name="favorite">favorite</string>
    <string name="_1000">1000</string>
    <string name="comment">comment</string>
    <string name="category">category</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="title_post">Post</string>
    <string name="title_achievement">Achievement</string>
    <string name="input_image">Input Image</string>
    <string name="create">Create</string>
    <string name="profil">Profil</string>
    <string name="home">Home</string>
    <string name="radiobutton">RadioButton</string>
    <string name="flora">Flora</string>
    <string name="fauna">Fauna</string>
</resources>