<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_item"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/tittle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_item" />

    <TextView
        android:id="@+id/tv_context"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:maxLines="2"
        android:text="@string/context"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle" />

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/favorite"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tittle"
        app:layout_constraintStart_toEndOf="@+id/tv_tittle"
        app:layout_constraintTop_toBottomOf="@+id/iv_item"
        app:srcCompat="@drawable/ic_favorite"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/_1000"
        app:layout_constraintBottom_toBottomOf="@+id/iv_favorite"
        app:layout_constraintStart_toEndOf="@+id/iv_favorite"
        app:layout_constraintTop_toTopOf="@+id/iv_favorite" />

    <ImageView
        android:id="@+id/iv_comment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/comment"
        app:layout_constraintBottom_toBottomOf="@+id/tv_favorite"
        app:layout_constraintStart_toEndOf="@+id/tv_favorite"
        app:layout_constraintTop_toTopOf="@+id/tv_favorite"
        app:srcCompat="@drawable/ic_comment"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/_1000"
        app:layout_constraintBottom_toBottomOf="@+id/iv_comment"
        app:layout_constraintStart_toEndOf="@+id/iv_comment"
        app:layout_constraintTop_toTopOf="@+id/iv_comment" />
</androidx.constraintlayout.widget.ConstraintLayout>